--- a/a2-4821.ipynb
+++ b/a2-4821.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2949,7 +2949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 115,
    "metadata": {
     "scrolled": true,
     "tags": []
@@ -3143,7 +3143,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3199,28 +3199,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 137,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.5058303176517893)"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# XXX: Is this correct?\n",
     "\n",
-    "q6d_i = ...\n",
+    "# Count the number of 'TARGET' == True and divide by total number of target\n",
+    "target_arr = nba2['TARGET']\n",
+    "q6d_i = (target_arr[target_arr].count() / target_arr.count())\n",
     "\n",
-    "q6d_ii = ...\n",
+    "# Since q6d_i >= 0.5, Our constant classifier should predict True\n",
+    "q6_ii = True\n",
     "\n",
-    "q6d_iii = ...\n"
+    "# Since the constant classifier is always predicting True, our error would be (1 - (probability of True)) = (probability of False)\n",
+    "q6d_iii = 1.00 - q6d_i"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 134,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q6d</pre></strong> passed! 🙌</p>"
+      ],
+      "text/plain": [
+       "q6d results: All test cases passed!"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q6d\")"
    ]
