--- a/a2-4821.ipynb
+++ b/a2-4821.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3443,26 +3443,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 140,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(0.5058303176517893)"
-      ]
-     },
-     "execution_count": 137,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# XXX: Is this correct?\n",
     "\n",
-    "# Count the number of 'TARGET' == True and divide by total number of target\n",
+    "# C ount the number of 'TARGET' == True and divide by total number of target\n",
     "target_arr = nba2['TARGET']\n",
     "q6d_i = (target_arr[target_arr].count() / target_arr.count())\n",
     "\n",
@@ -3475,7 +3464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 141,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -3490,7 +3479,7 @@
        "q6d results: All test cases passed!"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3531,14 +3520,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2487, 19)\n",
+      "(2487,)\n"
+     ]
+    }
+   ],
    "source": [
-    "nbaY = ...\n",
-    "nbaX = ...\n",
+    "nbaY = nba2['TARGET']\n",
+    "nbaX = nba2.drop(columns=['TARGET','PlayerID','Player','Pos','Tm','Year','FG','3P','2P','eFG%','FT','TRB','Age'])\n",
     "\n",
     "print(nbaX.shape)\n",
     "print(nbaY.shape)"
@@ -3546,12 +3544,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q6e</pre></strong> passed! 🌟</p>"
+      ],
+      "text/plain": [
+       "q6e results: All test cases passed!"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q6e\")"
    ]
