--- a/a2-4821.ipynb
+++ b/a2-4821.ipynb
@@ -3584,27 +3584,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1491,)"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Split of the test set\n",
-    "X_trainval, X_test, y_trainval, y_test = ...\n",
-    "\n",
+    "X_trainval, X_test, y_trainval, y_test = train_test_split(nbaX, nbaY, test_size=0.2, random_state=4821)\n",
     "# Split trainval into train + val \n",
-    "X_train, X_val, y_train, y_val = ...\n"
+    "X_train, X_val, y_train, y_val = train_test_split(X_trainval, y_trainval, test_size=0.25, random_state=4821)\n",
+    "y_train.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q6f</pre></strong> passed! 🚀</p>"
+      ],
+      "text/plain": [
+       "q6f results: All test cases passed!"
+      ]
+     },
+     "execution_count": 179,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q6f\")"
    ]
