--- a/a2-4821.ipynb
+++ b/a2-4821.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3235,21 +3235,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 221,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "# Split of the test set\n",
-    "X_trainval, X_test, y_trainval, y_test = train_test_split(nbaX, nbaY, test_size=0.2, random_state=4821)\n",
+    "X_trainval, X_test, y_trainval, y_test = train_test_split(nbaX, nbaY, test_size=0.2, random_state=4821, stratify=nbaY)\n",
     "# Split trainval into train + val \n",
-    "X_train, X_val, y_train, y_val = train_test_split(X_trainval, y_trainval, test_size=0.25, random_state=4821)"
+    "X_train, X_val, y_train, y_val = train_test_split(X_trainval, y_trainval, test_size=0.25, random_state=4821, stratify=y_trainval)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 222,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -3264,7 +3264,7 @@
        "q6f results: All test cases passed!"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 222,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3293,7 +3293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 223,
    "metadata": {
     "tags": []
    },
@@ -3311,7 +3311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 224,
    "metadata": {
     "deletable": false,
     "editable": false
@@ -3320,239 +3320,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong style='color: red;'><pre style='display: inline;'>q6g</pre> results:</strong></p><p><strong><pre style='display: inline;'>q6g - 1</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        np.isclose(X_train_sc[0][0], 0.117347) and np.isclose(X_train_sc[0][1], -0.5709238)\n",
-       "    Expecting:\n",
-       "        np.True_\n",
-       "    **********************************************************************\n",
-       "    Line 1, in q6g 0\n",
-       "    Failed example:\n",
-       "        np.isclose(X_train_sc[0][0], 0.117347) and np.isclose(X_train_sc[0][1], -0.5709238)\n",
-       "    Expected:\n",
-       "        np.True_\n",
-       "    Got:\n",
-       "        np.False_\n",
-       "</pre><p><strong><pre style='display: inline;'>q6g - 2</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        np.isclose(X_train_sc[60][10], -0.55316873) and np.isclose(X_train_sc[35][12], 0.537966644)\n",
-       "    Expecting:\n",
-       "        np.True_\n",
-       "    **********************************************************************\n",
-       "    Line 1, in q6g 1\n",
-       "    Failed example:\n",
-       "        np.isclose(X_train_sc[60][10], -0.55316873) and np.isclose(X_train_sc[35][12], 0.537966644)\n",
-       "    Expected:\n",
-       "        np.True_\n",
-       "    Got:\n",
-       "        np.False_\n",
-       "</pre><p><strong><pre style='display: inline;'>q6g - 3</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        np.isclose(X_val_sc[30][4], -0.780257632) and np.isclose(X_val_sc[23][9], -0.35039117)\n",
-       "    Expecting:\n",
-       "        np.True_\n",
-       "    **********************************************************************\n",
-       "    Line 1, in q6g 2\n",
-       "    Failed example:\n",
-       "        np.isclose(X_val_sc[30][4], -0.780257632) and np.isclose(X_val_sc[23][9], -0.35039117)\n",
-       "    Expected:\n",
-       "        np.True_\n",
-       "    Got:\n",
-       "        np.False_\n",
-       "</pre><p><strong><pre style='display: inline;'>q6g - 4</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        np.isclose(X_val_sc[24][14], -0.59249814) and np.isclose(X_val_sc[28][3], -0.67867433)\n",
-       "    Expecting:\n",
-       "        np.True_\n",
-       "    **********************************************************************\n",
-       "    Line 1, in q6g 3\n",
-       "    Failed example:\n",
-       "        np.isclose(X_val_sc[24][14], -0.59249814) and np.isclose(X_val_sc[28][3], -0.67867433)\n",
-       "    Expected:\n",
-       "        np.True_\n",
-       "    Got:\n",
-       "        np.False_\n",
-       "</pre><p><strong><pre style='display: inline;'>q6g - 5</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        np.isclose(X_test_sc[0][0], 1.451343696) and np.isclose(X_test_sc[0][1], 1.545438323)\n",
-       "    Expecting:\n",
-       "        np.True_\n",
-       "    **********************************************************************\n",
-       "    Line 1, in q6g 4\n",
-       "    Failed example:\n",
-       "        np.isclose(X_test_sc[0][0], 1.451343696) and np.isclose(X_test_sc[0][1], 1.545438323)\n",
-       "    Expected:\n",
-       "        np.True_\n",
-       "    Got:\n",
-       "        np.False_\n",
-       "</pre><p><strong><pre style='display: inline;'>q6g - 6</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        np.isclose(X_test_sc[20][1], -0.57512671) and np.isclose(X_test_sc[24][8], 0.695857162)\n",
-       "    Expecting:\n",
-       "        np.True_\n",
-       "    **********************************************************************\n",
-       "    Line 1, in q6g 5\n",
-       "    Failed example:\n",
-       "        np.isclose(X_test_sc[20][1], -0.57512671) and np.isclose(X_test_sc[24][8], 0.695857162)\n",
-       "    Expected:\n",
-       "        np.True_\n",
-       "    Got:\n",
-       "        np.False_\n",
-       "</pre><p><strong><pre style='display: inline;'>q6g - 7</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        np.isclose(X_trainval_sc[0][0], 0.226725226) and np.isclose(X_trainval_sc[40][13], 0.0533794211)\n",
-       "    Expecting:\n",
-       "        np.True_\n",
-       "    **********************************************************************\n",
-       "    Line 1, in q6g 6\n",
-       "    Failed example:\n",
-       "        np.isclose(X_trainval_sc[0][0], 0.226725226) and np.isclose(X_trainval_sc[40][13], 0.0533794211)\n",
-       "    Expected:\n",
-       "        np.True_\n",
-       "    Got:\n",
-       "        np.False_\n",
-       "</pre><p><strong><pre style='display: inline;'>q6g - 8</pre> result:</strong></p><pre>    ❌ Test case failed\n",
-       "    Trying:\n",
-       "        np.allclose(X_train_sc.mean(axis=0), [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])\n",
-       "    Expecting:\n",
-       "        True\n",
-       "    **********************************************************************\n",
-       "    Line 1, in q6g 7\n",
-       "    Failed example:\n",
-       "        np.allclose(X_train_sc.mean(axis=0), [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])\n",
-       "    Expected:\n",
-       "        True\n",
-       "    Got:\n",
-       "        False\n",
-       "</pre><p><strong><pre style='display: inline;'>q6g - 9</pre> result:</strong></p><pre>    ✅ Test case passed</pre>"
+       "<p><strong><pre style='display: inline;'>q6g</pre></strong> passed! ✨</p>"
       ],
       "text/plain": [
-       "q6g results:\n",
-       "    q6g - 1 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            np.isclose(X_train_sc[0][0], 0.117347) and np.isclose(X_train_sc[0][1], -0.5709238)\n",
-       "        Expecting:\n",
-       "            np.True_\n",
-       "        **********************************************************************\n",
-       "        Line 1, in q6g 0\n",
-       "        Failed example:\n",
-       "            np.isclose(X_train_sc[0][0], 0.117347) and np.isclose(X_train_sc[0][1], -0.5709238)\n",
-       "        Expected:\n",
-       "            np.True_\n",
-       "        Got:\n",
-       "            np.False_\n",
-       "\n",
-       "    q6g - 2 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            np.isclose(X_train_sc[60][10], -0.55316873) and np.isclose(X_train_sc[35][12], 0.537966644)\n",
-       "        Expecting:\n",
-       "            np.True_\n",
-       "        **********************************************************************\n",
-       "        Line 1, in q6g 1\n",
-       "        Failed example:\n",
-       "            np.isclose(X_train_sc[60][10], -0.55316873) and np.isclose(X_train_sc[35][12], 0.537966644)\n",
-       "        Expected:\n",
-       "            np.True_\n",
-       "        Got:\n",
-       "            np.False_\n",
-       "\n",
-       "    q6g - 3 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            np.isclose(X_val_sc[30][4], -0.780257632) and np.isclose(X_val_sc[23][9], -0.35039117)\n",
-       "        Expecting:\n",
-       "            np.True_\n",
-       "        **********************************************************************\n",
-       "        Line 1, in q6g 2\n",
-       "        Failed example:\n",
-       "            np.isclose(X_val_sc[30][4], -0.780257632) and np.isclose(X_val_sc[23][9], -0.35039117)\n",
-       "        Expected:\n",
-       "            np.True_\n",
-       "        Got:\n",
-       "            np.False_\n",
-       "\n",
-       "    q6g - 4 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            np.isclose(X_val_sc[24][14], -0.59249814) and np.isclose(X_val_sc[28][3], -0.67867433)\n",
-       "        Expecting:\n",
-       "            np.True_\n",
-       "        **********************************************************************\n",
-       "        Line 1, in q6g 3\n",
-       "        Failed example:\n",
-       "            np.isclose(X_val_sc[24][14], -0.59249814) and np.isclose(X_val_sc[28][3], -0.67867433)\n",
-       "        Expected:\n",
-       "            np.True_\n",
-       "        Got:\n",
-       "            np.False_\n",
-       "\n",
-       "    q6g - 5 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            np.isclose(X_test_sc[0][0], 1.451343696) and np.isclose(X_test_sc[0][1], 1.545438323)\n",
-       "        Expecting:\n",
-       "            np.True_\n",
-       "        **********************************************************************\n",
-       "        Line 1, in q6g 4\n",
-       "        Failed example:\n",
-       "            np.isclose(X_test_sc[0][0], 1.451343696) and np.isclose(X_test_sc[0][1], 1.545438323)\n",
-       "        Expected:\n",
-       "            np.True_\n",
-       "        Got:\n",
-       "            np.False_\n",
-       "\n",
-       "    q6g - 6 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            np.isclose(X_test_sc[20][1], -0.57512671) and np.isclose(X_test_sc[24][8], 0.695857162)\n",
-       "        Expecting:\n",
-       "            np.True_\n",
-       "        **********************************************************************\n",
-       "        Line 1, in q6g 5\n",
-       "        Failed example:\n",
-       "            np.isclose(X_test_sc[20][1], -0.57512671) and np.isclose(X_test_sc[24][8], 0.695857162)\n",
-       "        Expected:\n",
-       "            np.True_\n",
-       "        Got:\n",
-       "            np.False_\n",
-       "\n",
-       "    q6g - 7 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            np.isclose(X_trainval_sc[0][0], 0.226725226) and np.isclose(X_trainval_sc[40][13], 0.0533794211)\n",
-       "        Expecting:\n",
-       "            np.True_\n",
-       "        **********************************************************************\n",
-       "        Line 1, in q6g 6\n",
-       "        Failed example:\n",
-       "            np.isclose(X_trainval_sc[0][0], 0.226725226) and np.isclose(X_trainval_sc[40][13], 0.0533794211)\n",
-       "        Expected:\n",
-       "            np.True_\n",
-       "        Got:\n",
-       "            np.False_\n",
-       "\n",
-       "    q6g - 8 result:\n",
-       "        ❌ Test case failed\n",
-       "        Trying:\n",
-       "            np.allclose(X_train_sc.mean(axis=0), [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])\n",
-       "        Expecting:\n",
-       "            True\n",
-       "        **********************************************************************\n",
-       "        Line 1, in q6g 7\n",
-       "        Failed example:\n",
-       "            np.allclose(X_train_sc.mean(axis=0), [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0])\n",
-       "        Expected:\n",
-       "            True\n",
-       "        Got:\n",
-       "            False\n",
-       "\n",
-       "    q6g - 9 result:\n",
-       "        ✅ Test case passed"
+       "q6g results: All test cases passed!"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
