--- a/a2-4821.ipynb
+++ b/a2-4821.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -3356,15 +3356,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 245,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7074138598528842\n",
+      "0.7092528068137824\n",
+      "0.7074138598528842\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<style>#sk-container-id-2 {\n",
+       "<style>#sk-container-id-18 {\n",
        "  /* Definition of color scheme common for light and dark mode */\n",
        "  --sklearn-color-text: black;\n",
        "  --sklearn-color-line: gray;\n",
@@ -3394,15 +3403,15 @@
        "  }\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 {\n",
+       "#sk-container-id-18 {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 pre {\n",
+       "#sk-container-id-18 pre {\n",
        "  padding: 0;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 input.sk-hidden--visually {\n",
+       "#sk-container-id-18 input.sk-hidden--visually {\n",
        "  border: 0;\n",
        "  clip: rect(1px 1px 1px 1px);\n",
        "  clip: rect(1px, 1px, 1px, 1px);\n",
@@ -3414,7 +3423,7 @@
        "  width: 1px;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-dashed-wrapped {\n",
+       "#sk-container-id-18 div.sk-dashed-wrapped {\n",
        "  border: 1px dashed var(--sklearn-color-line);\n",
        "  margin: 0 0.4em 0.5em 0.4em;\n",
        "  box-sizing: border-box;\n",
@@ -3422,7 +3431,7 @@
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-container {\n",
+       "#sk-container-id-18 div.sk-container {\n",
        "  /* jupyter's `normalize.less` sets `[hidden] { display: none; }`\n",
        "     but bootstrap.min.css set `[hidden] { display: none !important; }`\n",
        "     so we also need the `!important` here to be able to override the\n",
@@ -3432,7 +3441,7 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-text-repr-fallback {\n",
+       "#sk-container-id-18 div.sk-text-repr-fallback {\n",
        "  display: none;\n",
        "}\n",
        "\n",
@@ -3448,14 +3457,14 @@
        "\n",
        "/* Parallel-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item::after {\n",
+       "#sk-container-id-18 div.sk-parallel-item::after {\n",
        "  content: \"\";\n",
        "  width: 100%;\n",
        "  border-bottom: 2px solid var(--sklearn-color-text-on-default-background);\n",
        "  flex-grow: 1;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel {\n",
+       "#sk-container-id-18 div.sk-parallel {\n",
        "  display: flex;\n",
        "  align-items: stretch;\n",
        "  justify-content: center;\n",
@@ -3463,28 +3472,28 @@
        "  position: relative;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item {\n",
+       "#sk-container-id-18 div.sk-parallel-item {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item:first-child::after {\n",
+       "#sk-container-id-18 div.sk-parallel-item:first-child::after {\n",
        "  align-self: flex-end;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item:last-child::after {\n",
+       "#sk-container-id-18 div.sk-parallel-item:last-child::after {\n",
        "  align-self: flex-start;\n",
        "  width: 50%;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-parallel-item:only-child::after {\n",
+       "#sk-container-id-18 div.sk-parallel-item:only-child::after {\n",
        "  width: 0;\n",
        "}\n",
        "\n",
        "/* Serial-specific style estimator block */\n",
        "\n",
-       "#sk-container-id-2 div.sk-serial {\n",
+       "#sk-container-id-18 div.sk-serial {\n",
        "  display: flex;\n",
        "  flex-direction: column;\n",
        "  align-items: center;\n",
@@ -3502,14 +3511,14 @@
        "\n",
        "/* Pipeline and ColumnTransformer style (default) */\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable {\n",
+       "#sk-container-id-18 div.sk-toggleable {\n",
        "  /* Default theme specific background. It is overwritten whether we have a\n",
        "  specific estimator or a Pipeline/ColumnTransformer */\n",
        "  background-color: var(--sklearn-color-background);\n",
        "}\n",
        "\n",
        "/* Toggleable label */\n",
-       "#sk-container-id-2 label.sk-toggleable__label {\n",
+       "#sk-container-id-18 label.sk-toggleable__label {\n",
        "  cursor: pointer;\n",
        "  display: block;\n",
        "  width: 100%;\n",
@@ -3519,7 +3528,7 @@
        "  text-align: center;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-18 label.sk-toggleable__label-arrow:before {\n",
        "  /* Arrow on the left of the label */\n",
        "  content: \"▸\";\n",
        "  float: left;\n",
@@ -3527,13 +3536,13 @@
        "  color: var(--sklearn-color-icon);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 label.sk-toggleable__label-arrow:hover:before {\n",
+       "#sk-container-id-18 label.sk-toggleable__label-arrow:hover:before {\n",
        "  color: var(--sklearn-color-text);\n",
        "}\n",
        "\n",
        "/* Toggleable content - dropdown */\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content {\n",
+       "#sk-container-id-18 div.sk-toggleable__content {\n",
        "  max-height: 0;\n",
        "  max-width: 0;\n",
        "  overflow: hidden;\n",
@@ -3542,12 +3551,12 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content.fitted {\n",
+       "#sk-container-id-18 div.sk-toggleable__content.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content pre {\n",
+       "#sk-container-id-18 div.sk-toggleable__content pre {\n",
        "  margin: 0.2em;\n",
        "  border-radius: 0.25em;\n",
        "  color: var(--sklearn-color-text);\n",
@@ -3555,79 +3564,79 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-toggleable__content.fitted pre {\n",
+       "#sk-container-id-18 div.sk-toggleable__content.fitted pre {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
+       "#sk-container-id-18 input.sk-toggleable__control:checked~div.sk-toggleable__content {\n",
        "  /* Expand drop-down */\n",
        "  max-height: 200px;\n",
        "  max-width: 100%;\n",
        "  overflow: auto;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
+       "#sk-container-id-18 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {\n",
        "  content: \"▾\";\n",
        "}\n",
        "\n",
        "/* Pipeline/ColumnTransformer-specific style */\n",
        "\n",
-       "#sk-container-id-2 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-18 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-18 div.sk-label.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator-specific style */\n",
        "\n",
        "/* Colorize estimator box */\n",
-       "#sk-container-id-2 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-18 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
+       "#sk-container-id-18 div.sk-estimator.fitted input.sk-toggleable__control:checked~label.sk-toggleable__label {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-label label.sk-toggleable__label,\n",
-       "#sk-container-id-2 div.sk-label label {\n",
+       "#sk-container-id-18 div.sk-label label.sk-toggleable__label,\n",
+       "#sk-container-id-18 div.sk-label label {\n",
        "  /* The background is the default theme color */\n",
        "  color: var(--sklearn-color-text-on-default-background);\n",
        "}\n",
        "\n",
        "/* On hover, darken the color of the background */\n",
-       "#sk-container-id-2 div.sk-label:hover label.sk-toggleable__label {\n",
+       "#sk-container-id-18 div.sk-label:hover label.sk-toggleable__label {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
        "/* Label box, darken color on hover, fitted */\n",
-       "#sk-container-id-2 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
+       "#sk-container-id-18 div.sk-label.fitted:hover label.sk-toggleable__label.fitted {\n",
        "  color: var(--sklearn-color-text);\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
        "\n",
        "/* Estimator label */\n",
        "\n",
-       "#sk-container-id-2 div.sk-label label {\n",
+       "#sk-container-id-18 div.sk-label label {\n",
        "  font-family: monospace;\n",
        "  font-weight: bold;\n",
        "  display: inline-block;\n",
        "  line-height: 1.2em;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-label-container {\n",
+       "#sk-container-id-18 div.sk-label-container {\n",
        "  text-align: center;\n",
        "}\n",
        "\n",
        "/* Estimator-specific */\n",
-       "#sk-container-id-2 div.sk-estimator {\n",
+       "#sk-container-id-18 div.sk-estimator {\n",
        "  font-family: monospace;\n",
        "  border: 1px dotted var(--sklearn-color-border-box);\n",
        "  border-radius: 0.25em;\n",
@@ -3637,18 +3646,18 @@
        "  background-color: var(--sklearn-color-unfitted-level-0);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-estimator.fitted {\n",
+       "#sk-container-id-18 div.sk-estimator.fitted {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-0);\n",
        "}\n",
        "\n",
        "/* on hover */\n",
-       "#sk-container-id-2 div.sk-estimator:hover {\n",
+       "#sk-container-id-18 div.sk-estimator:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-2);\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 div.sk-estimator.fitted:hover {\n",
+       "#sk-container-id-18 div.sk-estimator.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-2);\n",
        "}\n",
@@ -3735,7 +3744,7 @@
        "\n",
        "/* \"?\"-specific style due to the `<a>` HTML tag */\n",
        "\n",
-       "#sk-container-id-2 a.estimator_doc_link {\n",
+       "#sk-container-id-18 a.estimator_doc_link {\n",
        "  float: right;\n",
        "  font-size: 1rem;\n",
        "  line-height: 1em;\n",
@@ -3750,31 +3759,31 @@
        "  border: var(--sklearn-color-unfitted-level-1) 1pt solid;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 a.estimator_doc_link.fitted {\n",
+       "#sk-container-id-18 a.estimator_doc_link.fitted {\n",
        "  /* fitted */\n",
        "  border: var(--sklearn-color-fitted-level-1) 1pt solid;\n",
        "  color: var(--sklearn-color-fitted-level-1);\n",
        "}\n",
        "\n",
        "/* On hover */\n",
-       "#sk-container-id-2 a.estimator_doc_link:hover {\n",
+       "#sk-container-id-18 a.estimator_doc_link:hover {\n",
        "  /* unfitted */\n",
        "  background-color: var(--sklearn-color-unfitted-level-3);\n",
        "  color: var(--sklearn-color-background);\n",
        "  text-decoration: none;\n",
        "}\n",
        "\n",
-       "#sk-container-id-2 a.estimator_doc_link.fitted:hover {\n",
+       "#sk-container-id-18 a.estimator_doc_link.fitted:hover {\n",
        "  /* fitted */\n",
        "  background-color: var(--sklearn-color-fitted-level-3);\n",
        "}\n",
-       "</style><div id=\"sk-container-id-2\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier(n_neighbors=31)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-2\" type=\"checkbox\" checked><label for=\"sk-estimator-id-2\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;KNeighborsClassifier<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\">?<span>Documentation for KNeighborsClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>KNeighborsClassifier(n_neighbors=31)</pre></div> </div></div></div></div>"
+       "</style><div id=\"sk-container-id-18\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>KNeighborsClassifier(n_neighbors=3)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator fitted sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-18\" type=\"checkbox\" checked><label for=\"sk-estimator-id-18\" class=\"sk-toggleable__label fitted sk-toggleable__label-arrow fitted\">&nbsp;&nbsp;KNeighborsClassifier<a class=\"sk-estimator-doc-link fitted\" rel=\"noreferrer\" target=\"_blank\" href=\"https://scikit-learn.org/1.5/modules/generated/sklearn.neighbors.KNeighborsClassifier.html\">?<span>Documentation for KNeighborsClassifier</span></a><span class=\"sk-estimator-doc-link fitted\">i<span>Fitted</span></span></label><div class=\"sk-toggleable__content fitted\"><pre>KNeighborsClassifier(n_neighbors=3)</pre></div> </div></div></div></div>"
       ],
       "text/plain": [
-       "KNeighborsClassifier(n_neighbors=31)"
+       "KNeighborsClassifier(n_neighbors=3)"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 245,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3795,19 +3804,32 @@
     "min_err = math.inf\n",
     "for i in range(len(kvals)):\n",
     "    k = kvals[i]\n",
-    "    knn = KNeighborsClassifier(n_neighbors=k)\n",
-    "    knn.fit(X_trainval_sc, y_trainval)\n",
-    "    pred = knn.predict(X_test_sc)\n",
-    "    err = np.mean(pred != y_test)\n",
+    "    knn_val = KNeighborsClassifier(n_neighbors=k)\n",
+    "    knn_val.fit(X_val_sc, y_val)\n",
+    "    knn_train = KNeighborsClassifier(n_neighbors=k)\n",
+    "    knn_train.fit(X_train_sc, y_train)\n",
+    "    pred_val = knn_val.predict(X_test_sc)\n",
+    "    pred_tr = knn_train.predict(X_test_sc)\n",
+    "    auc_val = roc_auc_score(y_test, pred_val)\n",
+    "    auc_tr = roc_auc_score(y_test, pred_tr)\n",
+    "    knn_auc_val[0][i] = auc_val\n",
+    "    knn_auc_tr[0][i] = auc_tr\n",
     "    # roc for fpr and tpr\n",
     "    # use auc\n",
-    "    if err < min_err:\n",
-    "        min_err = err\n",
+    "    if auc_tr < min_err:\n",
+    "        min_err = auc_tr\n",
     "        knn_bestk = k\n",
-    "    \n",
+    "    if auc_val < min_err:\n",
+    "        min_err = auc_val\n",
+    "        knn_bestk = k\n",
     "\n",
     "# create a best model on train+validation\n",
-    "knn = KNeighborsClassifier(n_neighbors=k)\n",
+    "bestk_val = knn_auc_val.min()\n",
+    "bestk_tr = knn_auc_tr.min()\n",
+    "print(bestk_val)\n",
+    "print(bestk_tr)\n",
+    "\n",
+    "knn = KNeighborsClassifier(n_neighbors=knn_bestk)\n",
     "knn.fit(X_trainval_sc, y_trainval)\n",
     "\n",
     "\n",
