--- a/a3-4821/a3-4821.ipynb
+++ b/a3-4821/a3-4821.ipynb
@@ -191,29 +191,236 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ad488a79-00a7-4432-9a93-02fa3989f5a4",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PlayerID</th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Tm</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>G</th>\n",
+       "      <th>GS</th>\n",
+       "      <th>MP</th>\n",
+       "      <th>PTS</th>\n",
+       "      <th>...</th>\n",
+       "      <th>FT%</th>\n",
+       "      <th>ORB</th>\n",
+       "      <th>DRB</th>\n",
+       "      <th>TRB</th>\n",
+       "      <th>AST</th>\n",
+       "      <th>STL</th>\n",
+       "      <th>BLK</th>\n",
+       "      <th>TOV</th>\n",
+       "      <th>PF</th>\n",
+       "      <th>TARGET</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>abdelal01</td>\n",
+       "      <td>Alaa Abdelnaby</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>22</td>\n",
+       "      <td>POR</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>43</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>290</td>\n",
+       "      <td>135</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.568182</td>\n",
+       "      <td>27</td>\n",
+       "      <td>62</td>\n",
+       "      <td>89</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>22</td>\n",
+       "      <td>39</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>abdulma02</td>\n",
+       "      <td>Mahmoud Abdul-Rauf</td>\n",
+       "      <td>PG</td>\n",
+       "      <td>21</td>\n",
+       "      <td>DEN</td>\n",
+       "      <td>1991</td>\n",
+       "      <td>67</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>1505</td>\n",
+       "      <td>942</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.857143</td>\n",
+       "      <td>34</td>\n",
+       "      <td>87</td>\n",
+       "      <td>121</td>\n",
+       "      <td>206</td>\n",
+       "      <td>55</td>\n",
+       "      <td>4</td>\n",
+       "      <td>110</td>\n",
+       "      <td>149</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>abdulta01</td>\n",
+       "      <td>Tariq Abdul-Wahad</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>23</td>\n",
+       "      <td>SAC</td>\n",
+       "      <td>1998</td>\n",
+       "      <td>59</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>959</td>\n",
+       "      <td>376</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.672000</td>\n",
+       "      <td>44</td>\n",
+       "      <td>72</td>\n",
+       "      <td>116</td>\n",
+       "      <td>51</td>\n",
+       "      <td>35</td>\n",
+       "      <td>13</td>\n",
+       "      <td>65</td>\n",
+       "      <td>81</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>abdursh01</td>\n",
+       "      <td>Shareef Abdur-Rahim</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>20</td>\n",
+       "      <td>VAN</td>\n",
+       "      <td>1997</td>\n",
+       "      <td>80</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>2802</td>\n",
+       "      <td>1494</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.745665</td>\n",
+       "      <td>216</td>\n",
+       "      <td>339</td>\n",
+       "      <td>555</td>\n",
+       "      <td>175</td>\n",
+       "      <td>79</td>\n",
+       "      <td>79</td>\n",
+       "      <td>225</td>\n",
+       "      <td>199</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>abrinal01</td>\n",
+       "      <td>Álex Abrines</td>\n",
+       "      <td>SG</td>\n",
+       "      <td>23</td>\n",
+       "      <td>OKC</td>\n",
+       "      <td>2017</td>\n",
+       "      <td>68</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>1055</td>\n",
+       "      <td>406</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.897959</td>\n",
+       "      <td>18</td>\n",
+       "      <td>68</td>\n",
+       "      <td>86</td>\n",
+       "      <td>40</td>\n",
+       "      <td>37</td>\n",
+       "      <td>8</td>\n",
+       "      <td>33</td>\n",
+       "      <td>114</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 32 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    PlayerID               Player Pos  Age   Tm  Year   G    GS    MP   PTS  \\\n",
+       "0  abdelal01       Alaa Abdelnaby  PF   22  POR  1991  43   0.0   290   135   \n",
+       "1  abdulma02   Mahmoud Abdul-Rauf  PG   21  DEN  1991  67  19.0  1505   942   \n",
+       "2  abdulta01    Tariq Abdul-Wahad  SG   23  SAC  1998  59  16.0   959   376   \n",
+       "3  abdursh01  Shareef Abdur-Rahim  PF   20  VAN  1997  80  71.0  2802  1494   \n",
+       "4  abrinal01         Álex Abrines  SG   23  OKC  2017  68   6.0  1055   406   \n",
+       "\n",
+       "   ...       FT%  ORB  DRB  TRB  AST  STL  BLK  TOV   PF  TARGET  \n",
+       "0  ...  0.568182   27   62   89   12    4   12   22   39    True  \n",
+       "1  ...  0.857143   34   87  121  206   55    4  110  149    True  \n",
+       "2  ...  0.672000   44   72  116   51   35   13   65   81    True  \n",
+       "3  ...  0.745665  216  339  555  175   79   79  225  199    True  \n",
+       "4  ...  0.897959   18   68   86   40   37    8   33  114   False  \n",
+       "\n",
+       "[5 rows x 32 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nba = pd.read_csv('nba_rookies.csv', na_values=[\"N/A\", \"NA\", \" \", \"\"]) \n",
     "\n",
-    "nba2 = ...  # nba data with missing values handles. \n",
+    "nba2 = nba[~nba['Year'].isin([1980, 1981])].fillna(0)  # nba data with missing values handles. \n",
     "\n",
     "nba2.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e8530036",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q1a</pre></strong> passed! 🙌</p>"
+      ],
+      "text/plain": [
+       "q1a results: All test cases passed!"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q1a\")"
    ]
@@ -254,15 +461,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b0e3f30d-5d01-4512-be49-b96ca2bd3e65",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2487, 19)\n",
+      "(2487,)\n"
+     ]
+    }
+   ],
    "source": [
-    "nbaY = ...\n",
-    "nbaX = ...\n",
+    "nbaY = nba2['TARGET']\n",
+    "nbaX = nba2.drop(columns=['TARGET','PlayerID','Player','Pos','Tm','Year','FG','3P','2P','eFG%','FT','TRB','Age'])\n",
     "\n",
     "print(nbaX.shape)\n",
     "print(nbaY.shape)"
@@ -270,13 +486,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7fd7cdb9",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q1b</pre></strong> passed! ✨</p>"
+      ],
+      "text/plain": [
+       "q1b results: All test cases passed!"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q1b\")"
    ]
