--- a/a2-4821/a2-4821.ipynb
+++ b/a2-4821/a2-4821.ipynb
@@ -2,7 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# a2 - python - CS4821\n",
     "\n",
@@ -3293,6 +3299,10 @@
    "cell_type": "code",
    "execution_count": 543,
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [],
@@ -3355,6 +3365,10 @@
    "cell_type": "code",
    "execution_count": 545,
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
    "outputs": [
