--- a/a3-4821/a3-4821.ipynb
+++ b/a3-4821/a3-4821.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "id": "46b79a14-abb4-482a-a14a-f2e68c24177f",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "93ae8298-76c6-444d-9404-b25c41e67abe",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "id": "ad488a79-00a7-4432-9a93-02fa3989f5a4",
    "metadata": {
     "tags": []
@@ -385,7 +385,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "id": "e8530036",
    "metadata": {
     "deletable": false,
@@ -410,13 +410,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q1a</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>q1a</pre></strong> passed! 🎉</p>"
       ],
       "text/plain": [
        "q1a results: All test cases passed!"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "id": "b0e3f30d-5d01-4512-be49-b96ca2bd3e65",
    "metadata": {
     "tags": []
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "7fd7cdb9",
    "metadata": {
     "deletable": false,
@@ -496,13 +496,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q1b</pre></strong> passed! 🙌</p>"
+       "<p><strong><pre style='display: inline;'>q1b</pre></strong> passed! 🎉</p>"
       ],
       "text/plain": [
        "q1b results: All test cases passed!"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "id": "434cdef7-a86b-460e-a852-2bff52aad125",
    "metadata": {
     "tags": []
@@ -552,15 +552,15 @@
    ],
    "source": [
     "# Split of the test set\n",
-    "X_trainval, X_test, y_trainval, y_test = ...\n",
+    "X_trainval, X_test, y_trainval, y_test = train_test_split(nbaX, nbaY, test_size=0.2, random_state=4821, stratify=nbaY)\n",
     "\n",
     "# Split trainval into train + val \n",
-    "X_train, X_val, y_train, y_val = ...\n"
+    "X_train, X_val, y_train, y_val = train_test_split(X_trainval, y_trainval, test_size=0.25, random_state=4821, stratify=y_trainval)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "id": "89496ae9",
    "metadata": {
     "deletable": false,
@@ -568,15 +568,17 @@
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'grader' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mgrader\u001b[49m\u001b[38;5;241m.\u001b[39mcheck(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mq1c\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'grader' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q1c</pre></strong> passed! 💯</p>"
+      ],
+      "text/plain": [
+       "q1c results: All test cases passed!"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -620,12 +622,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "cc03712a-96ed-4de4-93e7-ac8ecd3f436b",
    "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "best hyperparameters: 1.0, poly, 3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>C=0.01</th>\n",
+       "      <th>C=0.1</th>\n",
+       "      <th>C=1</th>\n",
+       "      <th>Kernel</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.722556</td>\n",
+       "      <td>0.731187</td>\n",
+       "      <td>0.730637</td>\n",
+       "      <td>Linear</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.730601</td>\n",
+       "      <td>0.734455</td>\n",
+       "      <td>0.732879</td>\n",
+       "      <td>Poly d=2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.734758</td>\n",
+       "      <td>0.735173</td>\n",
+       "      <td>0.740830</td>\n",
+       "      <td>Poly d=3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.725388</td>\n",
+       "      <td>0.734733</td>\n",
+       "      <td>0.735814</td>\n",
+       "      <td>RBF</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     C=0.01     C=0.1       C=1    Kernel\n",
+       "0  0.722556  0.731187  0.730637    Linear\n",
+       "1  0.730601  0.734455  0.732879  Poly d=2\n",
+       "2  0.734758  0.735173  0.740830  Poly d=3\n",
+       "3  0.725388  0.734733  0.735814       RBF"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "svm_poly_auc_val = np.zeros((10,3,3))\n",
@@ -633,53 +719,149 @@
     "\n",
     "\n",
     "# With the train+val data, use 10-fold cross-validation (with StratifiedKFold )  \n",
-    "\n",
     "# Train each model on the train set, evaluate each model on the validation set\n",
     "#  set up scaling \n",
+    "scaler = StandardScaler()\n",
+    "X_train_sc = scaler.fit_transform(X_train)\n",
+    "X_val_sc = scaler.transform(X_val)\n",
     "\n",
     "# You will consider SVM models with the following hyperparameters: \n",
     "#   - Polynomial kernel with C = [10^-2, 10^-1, 1], degree = [1, 2, 3]\n",
     "#   - RBF kernel (Gaussian kernel) with C = [10^-2, 10^-1, 1] \n",
+    "Cs = [0.01, 0.1, 1.0]\n",
+    "degrees = [1, 2, 3]\n",
     "\n",
     "# Collect each model's validation performance. \n",
+    "skf = StratifiedKFold(n_splits=10, shuffle=True, random_state=4821)\n",
+    "\n",
+    "for fold, (train_idx, val_idx) in enumerate(skf.split(X_trainval, y_trainval)):\n",
+    "    X_train_fold, X_val_fold = X_trainval.iloc[train_idx], X_trainval.iloc[val_idx]\n",
+    "    y_train_fold, y_val_fold = y_trainval.values[train_idx], y_trainval.values[val_idx]\n",
+    "\n",
+    "    scaler = StandardScaler()\n",
+    "    X_train_fold_sc = scaler.fit_transform(X_train_fold)\n",
+    "    X_val_fold_sc = scaler.transform(X_val_fold)\n",
+    "    \n",
+    "    for i, C in enumerate(Cs):\n",
+    "        for j, degree in enumerate(degrees):\n",
+    "            svm_poly = svm.SVC(kernel='poly', C=C, degree=degree, coef0=1.0)\n",
+    "            svm_poly.fit(X_train_fold_sc, y_train_fold)\n",
+    "            y_val_pred = svm_poly.predict(X_val_fold_sc)\n",
+    "            svm_poly_auc_val[fold, i, j] = metrics.roc_auc_score(y_val_fold, y_val_pred) \n",
+    "    for i, C in enumerate(Cs):\n",
+    "        svm_rbf = svm.SVC(kernel='rbf', C=C)\n",
+    "        svm_rbf.fit(X_train_fold_sc, y_train_fold)\n",
+    "        y_val_pred = svm_rbf.predict(X_val_fold_sc)\n",
+    "        svm_rbf_auc_val[fold, i] = metrics.roc_auc_score(y_val_fold, y_val_pred)\n",
     "\n",
     "\n",
     "# Report the mean validation performance (AUC) as DataFrame with: \n",
     "#   - rows, Linear kernel, poly kernel d=2, poly kernel d=3, rbf kernel \n",
     "#   - columns, C = [10^-2, 10^-1, 1]\n",
-    "\n",
-    "svm_results = ...\n",
+    "mean_poly_auc = np.mean(svm_poly_auc_val, axis=0)\n",
+    "mean_rbf_auc = np.mean(svm_rbf_auc_val, axis=0)\n",
+    "svm_results = pd.DataFrame(\n",
+    "    {\n",
+    "        'C=0.01': [\n",
+    "            mean_poly_auc[0, 0],  # Linear kernel, C=0.01\n",
+    "            mean_poly_auc[0, 1],  # Poly d=2, C=0.01\n",
+    "            mean_poly_auc[0, 2],  # Poly d=3, C=0.01\n",
+    "            mean_rbf_auc[0]       # RBF kernel, C=0.01\n",
+    "        ],\n",
+    "        'C=0.1': [\n",
+    "            mean_poly_auc[1, 0],  # Linear kernel, C=0.1\n",
+    "            mean_poly_auc[1, 1],  # Poly d=2, C=0.1\n",
+    "            mean_poly_auc[1, 2],  # Poly d=3, C=0.1\n",
+    "            mean_rbf_auc[1]       # RBF kernel, C=0.1\n",
+    "        ],\n",
+    "        'C=1': [\n",
+    "            mean_poly_auc[2, 0],  # Linear kernel, C=1\n",
+    "            mean_poly_auc[2, 1],  # Poly d=2, C=1\n",
+    "            mean_poly_auc[2, 2],  # Poly d=3, C=1\n",
+    "            mean_rbf_auc[2]       # RBF kernel, C=1\n",
+    "        ],\n",
+    "        'Kernel': ['Linear', 'Poly d=2', 'Poly d=3', 'RBF'],\n",
+    "    }\n",
+    ")\n",
     "\n",
     "# Report the best hyperparameter combination (cost + kernel). \n",
-    "svm_bestC = ...  # numeric value\n",
-    "svm_bestKernel = ...  # string `poly` or `rbf` \n",
-    "svm_bestD = ... # integer or np.nan\n",
+    "best_poly_idx = np.unravel_index(np.argmax(mean_poly_auc), mean_poly_auc.shape)\n",
+    "best_rbf_idx = np.argmax(mean_rbf_auc)\n",
+    "\n",
+    "if mean_poly_auc[best_poly_idx] > mean_rbf_auc[best_rbf_idx]:\n",
+    "    svm_bestC = Cs[best_poly_idx[0]]\n",
+    "    svm_bestKernel = 'poly'\n",
+    "    svm_bestD = degrees[best_poly_idx[1]]\n",
+    "else:\n",
+    "    svm_bestC = Cs[best_rbf_idx]\n",
+    "    svm_bestKernel = 'rbf'\n",
+    "    svm_bestD = np.nan\n",
     "\n",
     "# Retrain the best model on train+val and report the test performance .\n",
-    "#  Scale train+val and test data like Q6(g) in Assignment a2 \n",
-    "scaler_final = ...\n",
-    "X_test_sc = ...\n",
-    "X_trainval_sc = ...\n",
+    "#  Scale train+val and test data like Q6(g) in Assignment a2 .\n",
+    "scaler_final = StandardScaler()\n",
+    "X_trainval_sc = scaler_final.fit_transform(X_trainval)\n",
+    "X_test_sc = scaler_final.transform(X_test)\n",
     "\n",
+    "if svm_bestKernel == 'poly':\n",
+    "    best_model = svm.SVC(kernel='poly', C=svm_bestC, degree=svm_bestDegrees, coef0=1.0)\n",
+    "else:\n",
+    "    best_model = svm.SVC(kernel='rbf', C=svm_bestC)\n",
+    "    \n",
+    "best_model.fit(X_trainval_sc, y_trainval)\n",
+    "y_test_pred = best_model.predict(X_test_sc)\n",
+    "svm_auc_test = metrics.roc_auc_score(y_test, y_test_pred)\n",
     "\n",
-    "svm_auc_test = ...\n",
-    "\n",
-    "print('best hyperparameters: %d, %s, %d' % (svm_bestC, \n",
-    "                                            svm_bestKernel, svm_bestD))\n",
+    "print(f'best hyperparameters: {svm_bestC}, {svm_bestKernel}, {svm_bestD}')\n",
     "svm_results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "ccaf63ca",
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<p><strong><pre style='display: inline;'>q1d</pre></strong> passed! 💯</p>"
+      ],
+      "text/plain": [
+       "q1d results: All test cases passed!"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grader.check(\"q1d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "2c7727ae-f571-4a38-8d26-ce5880dad0cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.7225555086120856)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "svm_results.iloc[0,0]"
    ]
   },
   {
