Q1d: Better row index labels

--- a/a3-4821/a3-4821.ipynb
+++ b/a3-4821/a3-4821.ipynb
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 110,
    "id": "cc03712a-96ed-4de4-93e7-ac8ecd3f436b",
    "metadata": {
     "editable": true,
@@ -651,51 +651,46 @@
        "      <th>C=0.01</th>\n",
        "      <th>C=0.1</th>\n",
        "      <th>C=1</th>\n",
-       "      <th>Kernel</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>Linear</th>\n",
        "      <td>0.722556</td>\n",
        "      <td>0.731187</td>\n",
        "      <td>0.730637</td>\n",
-       "      <td>Linear</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <th>Poly d=2</th>\n",
        "      <td>0.730601</td>\n",
        "      <td>0.734455</td>\n",
        "      <td>0.732879</td>\n",
-       "      <td>Poly d=2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>Poly d=3</th>\n",
        "      <td>0.734758</td>\n",
        "      <td>0.735173</td>\n",
        "      <td>0.740830</td>\n",
-       "      <td>Poly d=3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>RBF</th>\n",
        "      <td>0.725388</td>\n",
        "      <td>0.734733</td>\n",
        "      <td>0.735814</td>\n",
-       "      <td>RBF</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     C=0.01     C=0.1       C=1    Kernel\n",
-       "0  0.722556  0.731187  0.730637    Linear\n",
-       "1  0.730601  0.734455  0.732879  Poly d=2\n",
-       "2  0.734758  0.735173  0.740830  Poly d=3\n",
-       "3  0.725388  0.734733  0.735814       RBF"
+       "            C=0.01     C=0.1       C=1\n",
+       "Linear    0.722556  0.731187  0.730637\n",
+       "Poly d=2  0.730601  0.734455  0.732879\n",
+       "Poly d=3  0.734758  0.735173  0.740830\n",
+       "RBF       0.725388  0.734733  0.735814"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,8 +763,8 @@
     "            mean_poly_auc[2, 2],  # Poly d=3, C=1\n",
     "            mean_rbf_auc[2]       # RBF kernel, C=1\n",
     "        ],\n",
-    "        'Kernel': ['Linear', 'Poly d=2', 'Poly d=3', 'RBF'],\n",
-    "    }\n",
+    "    },\n",
+    "    index=['Linear', 'Poly d=2', 'Poly d=3', 'RBF']\n",
     ")\n",
     "\n",
     "# Report the best hyperparameter combination (cost + kernel). \n",
@@ -806,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 111,
    "id": "ccaf63ca",
    "metadata": {
     "deletable": false,
@@ -816,13 +811,13 @@
     {
      "data": {
       "text/html": [
-       "<p><strong><pre style='display: inline;'>q1d</pre></strong> passed! 🌟</p>"
+       "<p><strong><pre style='display: inline;'>q1d</pre></strong> passed! 🙌</p>"
       ],
       "text/plain": [
        "q1d results: All test cases passed!"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
